<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机qq登录sharedPreference</string>
    <string name="action_settings">Settings</string>
    <string name="hello_info">请输入账号和密码:</string>
	<string name="et_type_name">请输入账号</string>
    <string name="et_type_password">请输入密码</string>
    <string name="bt_login">登   录</string>
    <string name="cb_remember_password">记住密码</string>
    
</resources>
