<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_info" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:numeric="integer" 
        android:inputType="text|number"
        android:hint="@string/et_type_name"
        android:id="@+id/et_name"
        />
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:inputType="textPassword"
        android:hint="@string/et_type_password"
        android:id="@+id/et_password"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	 >
        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:text="@string/bt_login" />
		
        <CheckBox 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
			android:text="@string/cb_remember_password"     
			android:id="@+id/cb_password"			       
            />
        
        
    </RelativeLayout>

</LinearLayout>